<resources>
    <string name="app_name">MovieBrew</string>
    <string-array name="sort_options_array">
        <item>По названию</item>
        <item>По году</item>
        <item>По рейтингу</item>
    </string-array>
    <string name="logout_button_text">Logout</string>
    <string name="remove_button_text">Удалить</string>
    <string name="add_button_text">Добавить</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password (min. 6 characters)</string>
    <string name="button_register_text">Register</string>
    <string name="button_go_to_login_text">Already have an account? Login</string>
    <string name="hint_password_login">Password</string>
    <string name="button_login_text">Login</string>
    <string name="button_go_to_register_text">No account yet? Register</string>
    <string name="hint_search_title">Введите название фильма...</string>
    <string name="button_search_text">Поиск</string>
    <string name="toast_fill_all_fields">Please fill all fields</string>
    <string name="toast_password_min_length">Password must be at least 6 characters</string>
    <string name="toast_authentication_failed">Authentication failed: </string>
    <string name="toast_authentication_failed_login">Authentication failed.</string>
    <string name="toast_user_not_logged_in">User not logged in</string>
    <string name="toast_failed_to_load_library">Failed to load library.</string>
    <string name="profile_not_logged_in">Not logged in</string>
    <string name="toast_logged_out_successfully">Logged out successfully.</string>
    <string name="toast_movies_not_found">Фильмы не найдены</string>
    <string name="toast_network_error">Ошибка сети: </string>
    <string name="toast_movie_added">Фильм добавлен</string>
    <string name="toast_failed_to_add_movie">Не удалось добавить фильм</string>
    <string name="toast_please_login">Пожалуйста, войдите в систему</string>
    <string name="toast_movie_removed">Фильм удален</string>
    <string name="toast_failed_to_remove_movie">Не удалось удалить фильм</string>
    <string name="toast_movie_id_not_found">Movie ID not found.</string>
    <string name="movie_detail_genre">Genre: </string>
    <string name="movie_detail_director">Director: </string>
    <string name="movie_detail_actors">Actors: </string>
    <string name="toast_failed_to_load_movie_details">Failed to load movie details.</string>
    <string name="toast_network_error_detail">Network error: </string>
    <string name="button_add_to_library">Добавить</string>
    <string name="button_added_to_library">Добавлено</string>
    <string name="details_button_text">Детали</string>
    <string name="search_placeholder_text">Начните поиск фильмов</string>
    <string name="hint_search_year">Год</string>
    <string name="search_type_any">Любой</string>
    <string name="search_type_movie">Фильм</string>
    <string name="search_type_series">Сериал</string>
    <string name="search_type_episode">Эпизод</string>
    <string-array name="search_type_array">
        <item>@string/search_type_any</item>
        <item>@string/search_type_movie</item>
        <item>@string/search_type_series</item>
        <item>@string/search_type_episode</item>
    </string-array>

    <string name="genre_action">Боевик</string>
    <string name="genre_comedy">Комедия</string>
    <string name="genre_drama">Драма</string>
    <string name="genre_horror">Ужасы</string>
    <string name="genre_scifi">Фантастика</string>
    <string name="empty_library_message">Ваша библиотека пуста. Добавьте фильмы!</string>
</resources>